# ai-pandit-app

./: .cursorrules  .dockerignore  .env.example  .env.local.example  .env.production.example  .env.vercel.prod  .gcloudignore  .gitignore  .mailmap  .vercelignore  AGENTS.md  AI_DATA_AUDIT_REPORT.md  AI_SWISS_TRANSPARENCY_ENHANCEMENT_SUMMARY.md  ANALYSIS_PAGE_MIGRATION_GUIDE.md  API_AUDIT_REPORT.md  ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  AUDIT_COMPLETE.md  AUDIT_REPORT.md  AUDIT_REPORT_ANALYSIS_FLOW.md  AUDIT_REPORT_ANALYSIS_PAGE.md  BACKEND_COMPREHENSIVE_AUDIT_GUIDE.md  BTR_ANALYSIS_PLAN.md  BTR_AUDIT_REPORT.md  BTR_DATA_FLOW_AUDIT.md  BTR_DETAILED_ANALYSIS_REPORT.md  BTR_FINAL_VERIFICATION_REPORT_100_PERCENT.md  BTR_GARBAGE_VALUES_FIX_SUMMARY.md  BTR_INTEGRATION_VERIFICATION.md  BTR_ISO_STRING_SAFETY_FIX_SUMMARY.md  BTR_ITERATION_GUIDE.md  BTR_NULL_SAFETY_FIX_SUMMARY.md  BTR_PIPELINE_STABILIZATION_POST_MORTEM.md  BTR_PROMPT_FIXES_CHANGELOG.md  BTR_TEST_DATA_VERIFIED_ANONYMIZED.md  BTR_VERIFICATION_CHECKLIST.md  BUILD_GUIDE.md  CHANGELOG.md  CLAUDE.md  CODE_CHECK_SUMMARY.md  (+117 more)
services/ephemeris/: .env.example  Dockerfile  README.md  pyproject.toml
services/ephemeris/.venv-system/: pyvenv.cfg
services/ephemeris/app/: __init__.py  auth.py  config.py  errors.py  logging.py  main.py
services/ephemeris/app/models/: __init__.py  chart.py  ephemeris.py  health.py  sunrise.py
services/ephemeris/scripts/: bootstrap.sh  dev.sh  download-kernel.sh
services/ephemeris/tests/: conftest.py  test_batch_calculation.py  test_house_systems.py  test_planet_accuracy.py
(+1613 files in other folders)
